<resources>
    <string name="app_name">HungryStock</string>
    <string name="label_search_your_drink">Search your drink</string>
    <string name="label_more">More</string>
    <string name="title_popular_drink">Popular Drink</string>
    <string name="title_drinks">Drinks</string>
    <string name="title_random">Random</string>
    <string name="message_search_empty_result">The drink you are looking for is empty, try to find your other drink</string>
    <string name="title_result">Result</string>
    <string name="title_suggestions">Suggestions for you</string>
    <string name="title_filter">Filter</string>
    <string name="button_apply">Apply</string>
    <string name="label_by_category">By category</string>
    <string name="label_by_glass">By glass</string>
    <string name="label_by_ingredient">By ingredient</string>
    <string name="label_by_alcoholic">By alcoholic</string>
    <string name="label_instruction">Instruction</string>
    <string name="label_glass">Glass</string>
    <string name="title_detail">Detail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hungrystock">HUNGRYSTOCK</string>
    <string name="learn_to_earn_together">Learn to Earn Together</string>
    <string name="button_login_register">Login/Register</string>
    <string name="hungry_stock_adalah">HUNGRYSTOCK adalah sebuah komunitas yang setiap minggu mengadakan pertemuan untuk belajar tentang investasi di pasar modal dengan role model seperti Lo Kheng Hong, Benjamin Graham, Warren Buffett, Charlie Munger, dan Peter Lynch.</string>
    <string name="books_to_read">Books to Read</string>
    <string name="kenali_lebih_lanjut_tentang_program_di_hungrystock">Kenali lebih lanjut tentang program di HUNGRYSTOCK</string>
    <string name="label_email_address">Alamat Email</string>
    <string name="cth_name_example_com">cth: name@example.com</string>
    <string name="label_password_sekarang">Kata Sandi Sekarang</string>
    <string name="label_masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="label_daftar_sekarang">Daftar sekarang</string>
    <string name="button_lupa_password"><u>Lupa Kata Sandi</u></string>
    <string name="label_member_registration">Member Registration</string>
    <string name="label_upload_foto_profil">Upload foto profil</string>
    <string name="button_tambahkan_file">Tambahkan File</string>
    <string name="label_nama_lengkap">Nama Lengkap</string>
    <string name="hint_input">Input</string>
    <string name="label_tanggal_lahir">Tanggal Lahir</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="label_nomor_whatsapp">Nomor WhatsApp</string>
    <string name="hint_wa_number">0812 - 3456 - 7890</string>
    <string name="label_alamat_email">Alamat Email</string>
    <string name="label_password">Kata sandi</string>
    <string name="hint_minimal_8_karakter">Minimal 8 karakter</string>
    <string name="label_confirm_password">Konfirmasi Kata Sandi</string>
    <string name="hint_ketik_ulang_password">Ketik ulang kata sandi</string>
    <string name="whatsapp_untuk_konfirmasi_pembayaran">WhatsApp untuk konfirmasi pembayaran</string>

    <string name="button_kembali">Kembali</string>
    <string name="button_daftar_member">Daftar Member</string>
    <string name="info_bukti_transfer">Silahkan upload bukti pembayaran jika sudah melakukan transfer Rp5.000.000 ke Rek. BCA 6080 - 504 - 134 a.n Michael Setia Atmaja \n\n\n (Tulis di kolom keterangan saat transfer: Member HungryStock 2022)</string>
    <string name="label_halaman_1_dari_n">Halaman %s dari %s</string>
    <string name="title_proses_registrasi_anda_berhasil">Proses Registrasi Anda Berhasil</string>
    <string name="message_registration_success">Silahkan cek email secara berkala untuk mengetahui apakah status member HungryStock anda sudah aktif.\n\nTim kami sedang memproses registrasi anda.\n\nTerima Kasih.</string>
    <string name="button_kembali_ke_home">Kembali ke Home</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_menu_home">Home</string>
    <string name="title_event_and_agenda"><![CDATA[Event & Agenda]]></string>
    <string name="nav_menu_learning">Learning</string>
    <string name="nav_menu_research">Research</string>
    <string name="nav_menu_engine">Engine</string>
    <string name="nav_menu_hsro">HSRO</string>
    <string name="title_profile">Profile</string>
    <string name="button_simpan_profile">Simpan Profile</string>
    <string name="button_logout">Logout</string>
    <string name="hint_ketik_ulang_password_baru">Ketik ulang kata sandi baru</string>
    <string name="label_confirm_password_baru">Konfirmasi Kata Sandi Baru</string>
    <string name="hint_buat_password_baru">Buat Kata Sandi Baru</string>
    <string name="label_ganti_password">Ganti Kata Sandi</string>
    <string name="label_kode_member_nhungrystock">Kode Member \nHungryStock:</string>
    <string name="title_learning">Learning</string>
    <string name="title_research_n_data"><![CDATA[Research & Data]]></string>
    <string name="title_hungry_stock_engine">HungryStock Engine</string>
    <string name="title_hsro">HSRO</string>
    <string name="label_video_terkait">VIDEO TERKAIT</string>
    <string name="title_learning_detail">Learning Detail</string>
    <string name="button_filter">FILTER</string>
    <string name="hint_cari_research">Cari research . . .</string>
    <string name="title_tab_research_report">Research Report (%s)</string>
    <string name="title_tab_stock_data">Stock Data (%s)</string>
    <string name="dialog_title_filter_by">FILTER BY:</string>
    <string name="label_tahun">Tahun</string>
    <string name="hint_pilih_bulan">Pilih Bulan</string>
    <string name="label_bulan">Bulan</string>
    <string name="label_filter_emiten">Filter Emiten:</string>
    <string name="button_apply_filter">Apply Filter</string>
    <string name="label_research_terkait">RESEARCH TERKAIT</string>
    <string name="message_email_password_empty">Email dan kata sandi harus diisi</string>
    <string name="hint_forgot_password">Masukkan Email Anda yang terdaftar, untuk melakukan pengaturan ulang kata sandi.</string>
    <string name="message_email_empty">Email harus diisi</string>
    <string name="message_reset_password_success">Password telah direset, silahkan cek email anda</string>
    <string name="message_need_fill">Harus diisi</string>
    <string name="message_email_invalid">Email tidak valid</string>
    <string name="message_min_8_character">Minimal 8 karakter</string>
    <string name="message_password_not_matches">Kata sandi tidak sama</string>
    <string name="message_all_field_must_fill">Semua kolom harus diisi</string>
    <string name="message_attach_proof_payment_please">Silahkan lampirkan bukti transfer</string>
    <string name="permission_storage_required">Akses Penyimpanan diperlukan untuk menampilkan daftar gambar</string>
    <string name="message_profile_photo_empty">Foto profil harus diisi</string>
    <string name="label_nomor_telepon">Nomor Telepon</string>
    <string name="message_system_wrong">Maaf ada kesalahan sistem</string>
    <string name="label_pilih_kategori">Pilih Kategori</string>
    <string name="sorting_semua">Semua</string>
    <string name="sorting_terbaru">Terbaru</string>
    <string name="sorting_top_up_knowledge_amp_wisdom"><![CDATA[Top Up Knowledge & Wisdom]]></string>
    <string name="sorting_temu_emiten">Temu Emiten</string>
    <string name="sorting_bedah_emiten">Bedah Emiten</string>
    <string name="sorting_stockscope">Stock Scope</string>
    <string name="sorting_belajar_invest_bareng">Belajar Invest Bareng</string>
    <string name="label_tampilkan_berdasarkan_abjad">Tampilkan berdasarkan Abjad</string>
    <string name="label_pilih">Pilih</string>
    <string name="button_reset">Reset</string>
    <string name="one_pager">One Pager</string>
    <string name="stock_discovery">Stock Discovery</string>
    <string name="takeaway_temu_emiten">Takeaway Temu Emiten</string>
    <string name="bedah_emiten">Bedah Emiten</string>
    <string name="understanding_sector">Understanding Sector</string>
    <string name="message_no_data">Tidak ada data</string>

    <string-array name="sort_learning">
        <item>Terbaru</item>
        <item>Top Up Knowledge &amp; Wisdom</item>
        <item>Temu Emiten</item>
        <item>Bedah Emiten</item>
        <item>StockScope</item>
        <item>Belajar Invest Bareng</item>
    </string-array>

    <string-array name="months">
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>


</resources>