<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.onboarding.fragments.PageOneFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/background"
        >

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="@dimen/medium1"
            android:src="@drawable/img_onboarding_1"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label"
            android:layout_below="@id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/coolvetica"
            android:textColor="@color/secondary"
            android:textSize="@dimen/font_medium1"
            android:text="@string/hungrystock"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/normal"
            android:fontFamily="@font/coolvetica"
            android:text="@string/learn_to_earn_together"
            android:textColor="@color/white"
            android:textSize="@dimen/font_large1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_title"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:lineHeight="18dp"
            android:fontFamily="@font/ft_barlow_medium"
            android:gravity="center"
            android:text="@string/hungry_stock_adalah"
            android:textColor="@color/white"
            android:textSize="@dimen/font_normal" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/bt_login_register"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_alignParentBottom="true"
            app:cardCornerRadius="50dp"
            app:cardBackgroundColor="@color/secondary">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/barlow_semibold"
                android:textColor="@color/dark"
                android:textSize="@dimen/font_medium"
                android:text="@string/button_login_register"/>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</layout>
