<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.general.registration.RegistrationSuccessActivity">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_registration_success" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/ft_coolvetica"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/font_large1_1"
            android:text="@string/title_proses_registrasi_anda_berhasil"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="42dp"
            android:fontFamily="@font/ft_barlow_medium"
            android:gravity="center"
            android:text="@string/message_registration_success"
            android:textColor="@color/white"
            android:textSize="@dimen/font_medium1"
            app:layout_constraintBottom_toTopOf="@+id/bt_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/secondary"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/medium1"
                android:layout_marginEnd="@dimen/medium1"
                android:fontFamily="@font/barlow_semibold"
                android:gravity="center"
                android:text="@string/button_kembali_ke_home"
                android:textColor="@color/dark"
                android:textSize="@dimen/font_normal" />
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>